--- a/index.html
+++ b/index.html
@@ -115,21 +115,23 @@
                   <h1 style="text-align: center;">A NOSSA EMPRESA</h1>
                   <p style="text-align: justify;">
                     <span style="line-height: 2; font-size: 1.25rem;">
-                      <span class="u-custom-font u-font-arial">Sample text. Click to select the text box. Click again or
-                        double click to start editing the text. Dictum non consectetur a erat nam at. Aliquam malesuada
-                        bibendum arcu vitae elementum curabitur vitae. Tellus mauris a diam maecenas sed enim ut sem.
-                        Ipsum faucibus vitae aliquet.&nbsp;</span>
+                      <span class="u-custom-font u-font-arial">Nossa empresa foi fundada com a intenção de ajudar todas
+                        as mulheres com uma medicina alternativa. Nossos produtos são pensados a partir da ODS número 3,
+                        saúde e bem estar e ODS número 4, Educação de qualidade da ONU e pensando nas mulheres de todas
+                        as classes sociais, pois acreditamos que todas devem ter acesso aos nossos produtos.
+                        Para a criação de nossos produtos fomos até as mulheres e perguntamos a elas qual era o problema
+                        que mais incomodava elas em sua menstruação. E grande parte respondeu que o ciclo desregulado é
+                        um de seus incômodos. Então começamos a pensar em algo natural que possa ajudar essas mulheres.
+                        Depois de muitas pesquisas descobrimos as propriedades da cenoura que ajuda o fluxo sanguíneo na
+                        região da pélvis. E assim criamos o Vitmenstrual, que é uma bala feita de cenoura que ajuda a
+                        regular o ciclo menstrual.&nbsp;</span>
                     </span>
                   </p>
                   <blockquote>
                     <p style="text-align: justify;">
                       <span style="line-height: 2;">
-                        <span class="u-custom-font u-font-arial">Euismod in pellentesque massa placerat. Risus quis
-                          varius quam quisque. Fermentum leo vel orci porta non pulvinar neque. Pretium vulputate sapien
-                          nec sagittis aliquam malesuada bibendum arcu vitae. Viverra aliquet eget sit amet. Platea
-                          dictumst vestibulum rhoncus est. Leo integer malesuada nunc vel risus commodo viverra maecenas
-                          accumsan</span>
-                        <span class="u-custom-font u-font-arial">.&nbsp;</span>
+                        <span class="u-custom-font u-font-arial"></span>
+                        <span class="u-custom-font u-font-arial">&nbsp;</span>
                       </span>
                     </p>
                   </blockquote>
