--- a/Inicio.html
+++ b/Inicio.html
@@ -32,7 +32,7 @@
 <body class="u-body">
   <header class="u-align-center u-clearfix u-header u-palette-1-light-3 u-sticky u-header" id="sec-b0a0">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="https://nicepage.com" class="u-image u-image-circle u-logo u-image-1" data-image-width="150"
+      <a href="Inicio.html" class="u-image u-image-circle u-logo u-image-1" data-image-width="150"
         data-image-height="150" data-animation-name="rollIn" data-animation-duration="1000" data-animation-delay="0"
         data-animation-direction="">
         <img
