--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <body data-home-page="Inicio.html" data-home-page-title="Inicio" class="u-body">
   <header class="u-align-center u-clearfix u-header u-palette-1-light-3 u-sticky u-header" id="sec-b0a0">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="https://nicepage.com" class="u-image u-image-circle u-logo u-image-1" data-image-width="150"
+        <a href="Inicio.html" class="u-image u-image-circle u-logo u-image-1" data-image-width="150"
         data-image-height="150" data-animation-name="rollIn" data-animation-duration="1000" data-animation-delay="0"
-        data-animation-direction="">
+        data-animation-direction=""> 
         <img
           src="images/cfa6302ab32b579bfd74ca94e87ce4542917c0e63f64a6c873c36b32b22693a4482560c587d81d9273f62443fea6501d0ea867a968b462d794fb8c_1280.png"
           class="u-logo-image u-logo-image-1">
