--- a/Produtos.html
+++ b/Produtos.html
@@ -156,7 +156,7 @@
             class="u-align-center u-container-style u-palette-1-dark-2 u-products-item u-repeater-item u-repeater-item-2">
             <div class="u-container-layout u-similar-container u-valign-bottom-sm u-container-layout-3">
               <!--product_image-->
-              <img alt="" class="u-image u-image-default u-product-control u-image-2" src="images/3.svg">
+              <img alt="" class="u-image u-image-default u-product-control u-image-2" src="https://cdn.pixabay.com/photo/2018/07/12/00/38/tablets-3532308_960_720.jpg">
               <!--/product_image-->
               <div class="u-align-center u-container-style u-grey-10 u-group u-group-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-4">
