--- a/Produtos.html
+++ b/Produtos.html
@@ -117,7 +117,7 @@
                   <!--product_title-->
                   <h4 class="u-product-control u-text u-text-1">
                     <a class="u-product-title-link" href="#">
-                      <!--product_title_content-->Product 1 Title
+                      <!--product_title_content-->Produto 1
                       <!--/product_title_content-->
                     </a>
                   </h4>
@@ -127,13 +127,13 @@
                     <div class="u-price-wrapper u-spacing-10">
                       <!--product_old_price-->
                       <div class="u-hide-price u-old-price">
-                        <!--product_old_price_content-->$12
+                        <!--product_old_price_content-->R$12
                         <!--/product_old_price_content-->
                       </div>
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->$9.95
+                        <!--product_regular_price_content-->R$9.95
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -156,14 +156,15 @@
             class="u-align-center u-container-style u-palette-1-dark-2 u-products-item u-repeater-item u-repeater-item-2">
             <div class="u-container-layout u-similar-container u-valign-bottom-sm u-container-layout-3">
               <!--product_image-->
-              <img alt="" class="u-image u-image-default u-product-control u-image-2" src="https://cdn.pixabay.com/photo/2018/07/12/00/38/tablets-3532308_960_720.jpg">
+              <img alt="" class="u-image u-image-default u-product-control u-image-2"
+                src="https://cdn.pixabay.com/photo/2018/07/12/00/38/tablets-3532308_960_720.jpg">
               <!--/product_image-->
               <div class="u-align-center u-container-style u-grey-10 u-group u-group-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-4">
                   <!--product_title-->
                   <h4 class="u-product-control u-text u-text-default u-text-3">
                     <a class="u-product-title-link" href="#">
-                      <!--product_title_content-->Product 2 Title
+                      <!--product_title_content-->Produto 2
                       <!--/product_title_content-->
                     </a>
                   </h4>
@@ -173,13 +174,13 @@
                     <div class="u-price-wrapper u-spacing-10">
                       <!--product_old_price-->
                       <div class="u-hide-price u-old-price">
-                        <!--product_old_price_content-->$12
+                        <!--product_old_price_content-->R$12
                         <!--/product_old_price_content-->
                       </div>
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->$9.95
+                        <!--product_regular_price_content-->R$9.95
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -202,14 +203,15 @@
             class="u-align-center u-container-style u-palette-1-dark-2 u-products-item u-repeater-item u-repeater-item-3">
             <div class="u-container-layout u-similar-container u-valign-bottom-sm u-container-layout-5">
               <!--product_image-->
-              <img alt="" class="u-image u-image-default u-product-control u-image-3" src="images/4.svg">
+              <img alt="" class="u-image u-image-default u-product-control u-image-3"
+                src="https://cdn.pixabay.com/photo/2018/07/02/19/02/dietary-supplements-3512184_960_720.jpg">
               <!--/product_image-->
               <div class="u-align-center u-container-style u-grey-10 u-group u-group-3">
                 <div class="u-container-layout u-valign-middle u-container-layout-6">
                   <!--product_title-->
                   <h4 class="u-product-control u-text u-text-default u-text-5">
                     <a class="u-product-title-link" href="#">
-                      <!--product_title_content-->Product 3 Title
+                      <!--product_title_content-->Produto 3
                       <!--/product_title_content-->
                     </a>
                   </h4>
@@ -219,13 +221,13 @@
                     <div class="u-price-wrapper u-spacing-10">
                       <!--product_old_price-->
                       <div class="u-hide-price u-old-price">
-                        <!--product_old_price_content-->$12
+                        <!--product_old_price_content-->R$12
                         <!--/product_old_price_content-->
                       </div>
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->$9.95
+                        <!--product_regular_price_content-->R$9.95
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -248,14 +250,15 @@
             class="u-align-center u-container-style u-palette-1-dark-2 u-products-item u-repeater-item u-repeater-item-4">
             <div class="u-container-layout u-similar-container u-valign-bottom-sm u-container-layout-7">
               <!--product_image-->
-              <img alt="" class="u-image u-image-default u-product-control u-image-4" src="images/5.svg">
+              <img alt="" class="u-image u-image-default u-product-control u-image-4"
+                src="https://cdn.pixabay.com/photo/2014/01/16/17/24/pills-246495_960_720.jpg">
               <!--/product_image-->
               <div class="u-align-center u-container-style u-grey-10 u-group u-group-4">
                 <div class="u-container-layout u-valign-middle u-container-layout-8">
                   <!--product_title-->
                   <h4 class="u-product-control u-text u-text-default u-text-7">
                     <a class="u-product-title-link" href="#">
-                      <!--product_title_content-->Product 4 Title
+                      <!--product_title_content-->Produto 4
                       <!--/product_title_content-->
                     </a>
                   </h4>
@@ -265,13 +268,13 @@
                     <div class="u-price-wrapper u-spacing-10">
                       <!--product_old_price-->
                       <div class="u-hide-price u-old-price">
-                        <!--product_old_price_content-->$12
+                        <!--product_old_price_content-->R$12
                         <!--/product_old_price_content-->
                       </div>
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->$9.95
+                        <!--product_regular_price_content-->R$9.95
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -294,14 +297,15 @@
             class="u-align-center u-container-style u-palette-1-dark-2 u-products-item u-repeater-item u-repeater-item-5">
             <div class="u-container-layout u-similar-container u-valign-bottom-sm u-container-layout-9">
               <!--product_image-->
-              <img alt="" class="u-image u-image-default u-product-control u-image-5" src="images/6.svg">
+              <img alt="" class="u-image u-image-default u-product-control u-image-5"
+                src="https://cdn.pixabay.com/photo/2017/03/28/05/31/drug-2181078_960_720.jpg">
               <!--/product_image-->
               <div class="u-align-center u-container-style u-grey-10 u-group u-group-5">
                 <div class="u-container-layout u-valign-middle u-container-layout-10">
                   <!--product_title-->
                   <h4 class="u-product-control u-text u-text-default u-text-9">
                     <a class="u-product-title-link" href="#">
-                      <!--product_title_content-->Product 5 Title
+                      <!--product_title_content-->Produto 5
                       <!--/product_title_content-->
                     </a>
                   </h4>
@@ -317,7 +321,7 @@
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->$9.95
+                        <!--product_regular_price_content-->R$9.95
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -340,14 +344,15 @@
             class="u-align-center u-container-style u-palette-1-dark-2 u-products-item u-repeater-item u-repeater-item-6">
             <div class="u-container-layout u-similar-container u-valign-bottom-sm u-container-layout-11">
               <!--product_image-->
-              <img alt="" class="u-image u-image-default u-product-control u-image-6" src="images/7.svg">
+              <img alt="" class="u-image u-image-default u-product-control u-image-6"
+                src="https://cdn.pixabay.com/photo/2020/04/27/09/43/dietary-supplements-5099008_960_720.jpg">
               <!--/product_image-->
               <div class="u-align-center u-container-style u-grey-10 u-group u-group-6">
                 <div class="u-container-layout u-valign-middle u-container-layout-12">
                   <!--product_title-->
                   <h4 class="u-product-control u-text u-text-default u-text-11">
                     <a class="u-product-title-link" href="#">
-                      <!--product_title_content-->Product 6 Title
+                      <!--product_title_content-->Produto 6
                       <!--/product_title_content-->
                     </a>
                   </h4>
@@ -357,13 +362,13 @@
                     <div class="u-price-wrapper u-spacing-10">
                       <!--product_old_price-->
                       <div class="u-hide-price u-old-price">
-                        <!--product_old_price_content-->$12
+                        <!--product_old_price_content-->R$12
                         <!--/product_old_price_content-->
                       </div>
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->$9.95
+                        <!--product_regular_price_content-->R$9.95
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
