--- a/Produtos.html
+++ b/Produtos.html
@@ -133,7 +133,7 @@
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->R$9.95
+                        <!--product_regular_price_content-->R$12,99
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -144,7 +144,7 @@
               </div>
               <!--product_content-->
               <div class="u-product-control u-product-desc u-text u-text-2">
-                <!--product_content_content-->Sample small text. Lorem ipsum dolor sit amet.
+                <!--product_content_content-->BCM-1.
                 <!--/product_content_content-->
               </div>
               <!--/product_content-->
@@ -180,7 +180,7 @@
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->R$9.95
+                        <!--product_regular_price_content-->R$15,00
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -191,7 +191,7 @@
               </div>
               <!--product_content-->
               <div class="u-product-control u-product-desc u-text u-text-4">
-                <!--product_content_content-->Sample small text. Lorem ipsum dolor sit amet.
+                <!--product_content_content-->BCM-2.
                 <!--/product_content_content-->
               </div>
               <!--/product_content-->
@@ -227,7 +227,7 @@
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->R$9.95
+                        <!--product_regular_price_content-->R$14,50
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -238,7 +238,7 @@
               </div>
               <!--product_content-->
               <div class="u-product-control u-product-desc u-text u-text-6">
-                <!--product_content_content-->Sample small text. Lorem ipsum dolor sit amet.
+                <!--product_content_content-->BCM-3.
                 <!--/product_content_content-->
               </div>
               <!--/product_content-->
@@ -274,7 +274,7 @@
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->R$9.95
+                        <!--product_regular_price_content-->R$13,45
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -285,7 +285,7 @@
               </div>
               <!--product_content-->
               <div class="u-product-control u-product-desc u-text u-text-8">
-                <!--product_content_content-->Sample small text. Lorem ipsum dolor sit amet.
+                <!--product_content_content-->BCM-4.
                 <!--/product_content_content-->
               </div>
               <!--/product_content-->
@@ -321,7 +321,7 @@
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->R$9.95
+                        <!--product_regular_price_content-->R$26,50
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -332,7 +332,7 @@
               </div>
               <!--product_content-->
               <div class="u-product-control u-product-desc u-text u-text-10">
-                <!--product_content_content-->Sample small text. Lorem ipsum dolor sit amet.
+                <!--product_content_content-->BCM-5.
                 <!--/product_content_content-->
               </div>
               <!--/product_content-->
@@ -368,7 +368,7 @@
                       <!--/product_old_price-->
                       <!--product_regular_price-->
                       <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">
-                        <!--product_regular_price_content-->R$9.95
+                        <!--product_regular_price_content-->R$30,00
                         <!--/product_regular_price_content-->
                       </div>
                       <!--/product_regular_price-->
@@ -379,7 +379,7 @@
               </div>
               <!--product_content-->
               <div class="u-product-control u-product-desc u-text u-text-12">
-                <!--product_content_content-->Sample small text. Lorem ipsum dolor sit amet.
+                <!--product_content_content-->BCM-6.
                 <!--/product_content_content-->
               </div>
               <!--/product_content-->
